Fix popover z-index

--- a/src/assets/css/popover.css
+++ b/src/assets/css/popover.css
@@ -1,6 +1,7 @@
 #popover {
   min-width: 200px;
   position: absolute;
+  z-index: 10;
 
   .popover_confirm {
     @apply p-2 text-center;
